Fix: align console text to the left

--- a/static/styles.css
+++ b/static/styles.css
@@ -62,6 +62,7 @@ img {
     height: 290px;
     border-radius: 4px;
     padding: 10px;
+    text-align: left
 }
 .console-wrapper .console pre {
     background-color: inherit;
